checkin button state change is pedning

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -35,6 +35,8 @@ target 'CustomerApp' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'react-native-simple-toast', :path => '../node_modules/react-native-simple-toast'
+
   target 'CustomerAppTests' do
     inherit! :search_paths
     # Pods for testing
