--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "querystringify": "^2.1.1",
     "ramda": "^0.27.0",
@@ -38,7 +39,6 @@
     "react": "16.9.0",
     "react-native": "0.61.0",
     "react-native-activity-indicator": "^0.0.4",
-    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-config": "^0.12.0",
     "react-native-device-info": "^5.3.0",
     "react-native-gesture-handler": "^1.6.1",
@@ -46,6 +46,7 @@
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.9.0",
     "react-native-screens": "^2.9.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-navigation": "4.0.5",
     "react-navigation-redux-helpers": "^4.0.1",
     "react-navigation-stack": "^1.10.3",
